--- a/Inference/Scripts/Phishing/PProducer.ipynb
+++ b/Inference/Scripts/Phishing/PProducer.ipynb
@@ -149,16 +149,19 @@
     "        \n",
     "#Data preprocessing\n",
     "def preprocess(df):\n",
+    "    #df.drop(columns=['url'], inplace=True)\n",
     "    with engine.connect() as conn: \n",
-    "        query = text('SELECT * FROM metadata_table_phishing ORDER BY version DESC LIMIT 1')\n",
+    "        query = text('SELECT * FROM metadata_table_phishing ORDER BY version DESC LIMIT 1;')\n",
     "        data = pd.read_sql_query(query, conn)\n",
     "        row = data.iloc[0]\n",
     "        factors = row['factor']\n",
-    "    \n",
+    "    #c = df.columns.intersection(factors.keys()).tolist()\n",
+    "    #c.append('status')\n",
+    "    #df = df[c]\n",
     "    for i in df.columns:\n",
-    "        if i != 'outcome' and factors[i.lower()] == None:\n",
+    "        if i != 'status' and factors[i.lower()] == None:\n",
     "            df.drop(columns=i, inplace=True)\n",
-    "        elif i != 'outcome':\n",
+    "        elif i != 'status':\n",
     "            zscore_normalization(df, i, factors)\n",
     "    return df\n"
    ]
@@ -296,13 +299,13 @@
     "logger.info(\"Downloading CSV file from GitHub...\")\n",
     "response = requests.get(github_url)\n",
     "df = pd.DataFrame()\n",
+    "\n",
     "# Check if the request was successful\n",
     "if response.status_code == 200:\n",
     "    logger.info(\"CSV file downloaded successfully.\")\n",
     "    # Read the data into a pandas DataFrame\n",
     "\n",
-    "    cols = column_names()\n",
-    "    df = pd.read_csv(github_url, index_col=False, names=cols)\n",
+    "    df = pd.read_csv(github_url)\n",
     "    \n",
     "    mapping = {'legitimate':0, 'phishing':1}\n",
     "\n",
@@ -329,6 +332,21 @@
     "    bootstrap_servers=brokers,\n",
     "    value_serializer=lambda message: json.dumps(message).encode('utf-8'),\n",
     ")\n",
+    "df.columns = df.columns.str.lower()\n",
+    "\n",
+    "try:\n",
+    "    with engine.connect() as conn: \n",
+    "        query = text(\"SELECT * FROM metadata_table_phishing ORDER BY date DESC LIMIT 1;\")\n",
+    "        order = pd.read_sql_query(query, conn)\n",
+    "        order = order['factor'][0]\n",
+    "        order.pop('version')\n",
+    "        order = {key: value for key, value in order.items() if value is not None}\n",
+    "        new_order = list(order.keys())\n",
+    "        #print(new_order)\n",
+    "except Exception as e:\n",
+    "    print(f\"Failed to fetch data: {e}\")\n",
+    "new_order.append('uid')\n",
+    "df = df[new_order]\n",
     "\n",
     "# Send data to KServe and PostgreSQL\n",
     "first_5_rows = df.head(5)\n",
