hitl for all use cases and small producer changes

--- a/Inference/Scripts/Phishing/PProducer.ipynb
+++ b/Inference/Scripts/Phishing/PProducer.ipynb
@@ -149,15 +149,12 @@
     "        \n",
     "#Data preprocessing\n",
     "def preprocess(df):\n",
-    "    #df.drop(columns=['url'], inplace=True)\n",
+    "    df.drop(columns=['url'], inplace=True)\n",
     "    with engine.connect() as conn: \n",
     "        query = text('SELECT * FROM metadata_table_phishing ORDER BY version DESC LIMIT 1;')\n",
     "        data = pd.read_sql_query(query, conn)\n",
     "        row = data.iloc[0]\n",
     "        factors = row['factor']\n",
-    "    #c = df.columns.intersection(factors.keys()).tolist()\n",
-    "    #c.append('status')\n",
-    "    #df = df[c]\n",
     "    for i in df.columns:\n",
     "        if i != 'status' and factors[i.lower()] == None:\n",
     "            df.drop(columns=i, inplace=True)\n",
@@ -311,7 +308,7 @@
     "\n",
     "    df['status'] = df['status'].map(mapping)\n",
     "    \n",
-    "    unprocess_df = df\n",
+    "    unprocess_df = df.copy()\n",
     "    df = preprocess(df)\n",
     "    df = df.drop(columns=['status'])\n",
     "    logger.info(\"CSV file processed successfully.\")\n",
